Creación de modelos y cadena de conexión a la base de datos

--- a/FacturacionAPI/appsettings.json
+++ b/FacturacionAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "FacturaDbConnection": "Server=FacturasDb.mssql.somee.com; Database=FacturasDb; User ID=apiweb_SQLLogin_1; Password=ijr464k8fl; Encrypt=false; TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
