--- a/FacturacionAPI/appsettings.json
+++ b/FacturacionAPI/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSetting": {
+    "SecretKey": "EstaEsUnaClaveSecretaDeJSONWebToke", //Clave secreta para firmar token
+    "Issuer": "https://localhost:7107", //Emisor del token
+    "Audience": "AppCliente" //Destinatario del token
+  }
 }
